src/objects/Opportunity_Gate_Approval_History__c/Opportunity_Gate_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Opportunity Tollgate  Approval History</label>
    <nameField>
        <displayFormat>OPAH-{0000}</displayFormat>
        <label>Opportunity Tollgate Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Tollgate  Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>