src/objects/Opportunity_Gate_Approval_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field is used to capture comments from the user when he accepts/rejects the toll gate record</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>