src/objects/Opportunity_Gate_Approval_History__c/fields/Opportunity_Gate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Gate__c</fullName>
    <label>Opportunity Tollgate</label>
    <referenceTo>Opportunity_Gate__c</referenceTo>
    <relationshipLabel>Opportunity Tollgate  Approval History</relationshipLabel>
    <relationshipName>Opportunity_Gate_Approval_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>